# mine-sweeper-solver

./: .coverage  .coveragerc-ui  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  example.py  main.py  pyproject.toml  requirements-dev.txt  requirements-ui-test.txt
.github/workflows/: ui-tests.yml
docs/: CODE_QUALITY.md  GITIGNORE_CLEANUP.md
scripts/: lint.bat  lint.sh
src/: __init__.py
src/minesweeper_solver/: __init__.py
tests/ui/: conftest.py
tests/ui/e2e/: test_user_workflows.py
tests/ui/integration/: test_board_editor.py  test_hover_highlights.py  test_import_export.py  test_solver_ui.py  test_tools.py
tests/ui/utils/: assertions.py  gui_automation.py
tests/unit/: test_minesweeper_solver.py
tests_ui/: README.md  UI_TESTING_STRATEGY.md  conftest.py  pytest.ini
tests_ui/e2e/: test_user_workflows.py
tests_ui/integration/: test_board_editor.py  test_import_export.py  test_solver_ui.py  test_tools.py
tests_ui/utils/: gui_automation.py
ui/: __init__.py
