[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minesweeper-solver"
version = "1.0.0"
description = "Minesweeper Solver with GUI Board Editor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["minesweeper", "solver", "game", "puzzle", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xvfb>=2.0.0; sys_platform == 'linux'",
    
    # Linting and Formatting
    "black>=24.0.0",
    "ruff>=0.3.0",
    
    # Pre-commit hooks
    "pre-commit>=3.6.0",
    
    # Type checking (optional)
    "mypy>=1.8.0",
]

[project.scripts]
minesweeper-solver = "main:main"

[project.urls]
Homepage = "https://github.com/example/minesweeper-solver"
Repository = "https://github.com/example/minesweeper-solver"
Issues = "https://github.com/example/minesweeper-solver/issues"

# =============================================================================
# BLACK CONFIGURATION
# =============================================================================
[tool.black]
# Target Python version
target-version = ["py311", "py312"]

# Line length
line-length = 88

# Files to include
include = '\.pyi?$'

# Files to exclude
exclude = '''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | env
    | \.env
    | node_modules
)/
'''

# Skip string normalization (set to true to avoid converting quotes)
skip-string-normalization = false

# Enable experimental features
preview = false

# Python cell magics to process
python-cell-magics = []

# Enable Jupyter notebook support
enable-unstable-feature = []

# =============================================================================
# RUFF CONFIGURATION
# =============================================================================
[tool.ruff]
# Target Python version
target-version = "py311"

# Line length (must match black)
line-length = 88

# Files to include
include = ["*.py", "*.pyi", "**/pyproject.toml"]

# Files to exclude
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "env",
    ".env",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Respect gitignore
respect-gitignore = true

# Show source code in output
show-source = true

[tool.ruff.lint]
# Enable all rules by default, then selectively disable
select = [
    # Pyflakes - detect various errors
    "F",
    
    # Pycodestyle - PEP 8 style guide
    "E",
    "W",
    
    # McCabe complexity
    "C90",
    
    # isort - import sorting
    "I",
    
    # Pep8-naming - naming conventions
    "N",
    
    # Pyupgrade - upgrade Python code
    "UP",
    
    # flake8-2020 - check for misuse of sys.version or sys.version_info
    "YTT",
    
    # flake8-annotations - check for presence of annotations
    "ANN",
    
    # flake8-async - async-related checks
    "ASYNC",
    
    # flake8-bandit - security checks
    "S",
    
    # flake8-blind-except - check for blind except statements
    "BLE",
    
    # flake8-boolean-trap - check for boolean positional arguments
    "FBT",
    
    # flake8-bugbear - find likely bugs and design problems
    "B",
    
    # flake8-builtins - check for builtins being used as variables
    "A",
    
    # flake8-commas - enforce trailing commas
    "COM",
    
    # flake8-comprehensions - check for unnecessary list/dict/set comprehensions
    "C4",
    
    # flake8-copyright - check for copyright notices
    "CPY",
    
    # flake8-datetimez - check for incorrect datetime usage
    "DTZ",
    
    # flake8-debugger - check for debugger imports and calls
    "T10",
    
    # flake8-django - Django-specific checks
    "DJ",
    
    # flake8-docstrings - docstring conventions
    "D",
    
    # flake8-errmsg - better error message formatting
    "EM",
    
    # flake8-executable - check for executable permissions and shebangs
    "EXE",
    
    # flake8-future-annotations - check for future annotations
    "FA",
    
    # flake8-gettext - check for gettext issues
    "INT",
    
    # flake8-implicit-str-concat - check for implicit string concatenation
    "ISC",
    
    # flake8-import-conventions - check for import conventions
    "ICN",
    
    # flake8-logging - logging-related checks
    "LOG",
    
    # flake8-logging-format - enforce log message formatting
    "G",
    
    # flake8-no-pep420 - check for missing __init__.py files
    "INP",
    
    # flake8-pie - misc lints
    "PIE",
    
    # flake8-print - check for print statements
    "T20",
    
    # flake8-pytest-style - pytest-specific checks
    "PT",
    
    # flake8-quotes - check for quote style
    "Q",
    
    # flake8-raise - check for raise statement style
    "RSE",
    
    # flake8-return - check for return statement issues
    "RET",
    
    # flake8-self - check for missing cls/self
    "SLF",
    
    # flake8-simplify - simplify code
    "SIM",
    
    # flake8-slots - require __slots__ for subclasses of immutable types
    "SLOT",
    
    # flake8-string-format - check for string formatting issues
    "RUF",
    
    # flake8-tidy-imports - tidy imports
    "TID",
    
    # flake8-type-checking - type checking related
    "TCH",
    
    # flake8-typing-imports - check for typing imports
    "TYP",
    
    # flake8-use-pathlib - use pathlib instead of os.path
    "PTH",
    
    # flake8-useless-assert - check for useless assert statements
    "UT",
    
    # eradicate - commented-out code
    "ERA",
    
    # pandas-vet - pandas-specific checks
    "PD",
    
    # pygrep-hooks - checks from pre-commit-hooks
    "PGH",
    
    # Pylint - various checks
    "PL",
    
    # tryceratops - try/except best practices
    "TRY",
    
    # flynt - f-string conversion
    "FLY",
    
    # NumPy-specific rules
    "NPY",
    
    # Airflow - Airflow-specific checks
    "AIR",
    
    # Perflint - performance anti-patterns
    "PERF",
    
    # refurb - refactoring suggestions
    "FURB",
    
    # pandas-vet
    "PD",
]

# Rules to ignore (selectively disable for practicality)
ignore = [
    # Too strict for most projects
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
    
    # Docstring conventions - too strict for internal code
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
    "D413",  # Missing blank line after last section
    
    # Allow prints in specific contexts
    "T201",  # print found
    
    # Allow broad exceptions in specific contexts
    "S110",  # try-except-pass
    "S112",  # try-except-continue
    
    # Allow magic values in comparisons
    "PLR2004",  # Magic value used in comparison
    
    # Allow TODO comments
    "FIX002",  # Line contains TODO
    
    # Allow assert statements (needed for pytest)
    "S101",  # Use of assert detected
    
    # Ignore complexity for now (can be enabled later)
    "C901",  # Function is too complex
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    
    # Allow implicit string concatenation
    "ISC001",  # Single line implicit string concatenation (conflicts with black)
]

# Allow autofix for these rules
fixable = ["ALL"]

# Do not fix these rules
unfixable = []

# Rules to check but not enforce
extend-select = []

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.isort]
# Profile to use
profile = "black"

# Known first-party packages
known-first-party = ["minesweeper_solver", "ui", "tests", "tests_ui"]

# Known third-party packages
known-third-party = ["pytest"]

# Sections
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Default section
default-section = "THIRDPARTY"

# Add imports to their section
from-first = false

# Force single line per import
force-single-line = false

# Force sort within sections
force-sort-within-sections = false

# Order by type
order-by-type = true

# Relative imports order
relative-imports-order = "closest-to-furthest"

# Required imports
required-imports = []

# Skip files
skip = ["__init__.py"]

# Skip glob patterns
skip-glob = []

# Split on trailing comma
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
# Maximum McCabe complexity
max-complexity = 15

[tool.ruff.lint.pep8-naming]
# Classmethod decorator names
classmethod-decorators = ["classmethod"]

#staticmethod decorator names
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.pyupgrade]
# Preserve types comment
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
# Test files - allow more relaxed rules
"**/test_*.py" = [
    "S101",     # Allow asserts
    "ANN001",   # Allow missing argument types in tests
    "ANN201",   # Allow missing return types in tests
    "D100",     # Allow missing module docstrings
    "D101",     # Allow missing class docstrings  
    "D102",     # Allow missing method docstrings
    "D103",     # Allow missing function docstrings
    "PLR2004",  # Allow magic values in tests
    "PT011",    # Allow pytest.raises without match
    "PT012",    # Allow pytest.raises with multiple statements
]

"**/tests/**/*.py" = [
    "S101",
    "ANN001",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "PLR2004",
]

"**/tests_ui/**/*.py" = [
    "S101",
    "ANN001",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "PLR2004",
]

"__init__.py" = [
    "D104",     # Allow missing package docstring
    "F401",     # Allow unused imports (often used for exports)
]

# Conftest files
"**/conftest.py" = [
    "D100",
    "D103",
    "ANN001",
    "ANN201",
]

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "tests_ui"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
    "gui: marks tests as GUI tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:tkinter.*",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src", "ui"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "*/.env/*",
    "*/node_modules/*",
    "conftest.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "pass  # cov: ignore",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
title = "Minesweeper Solver Coverage"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# MYPY CONFIGURATION (Optional but recommended)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = ["tests.*", "tests_ui.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["tkinter.*"]
ignore_missing_imports = true
