[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "minesweeper-solver"
version = "1.0.0"
description = "Minesweeper Solver with GUI Board Editor"
authors = ["niicez <tuandaris1@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/niicez/mine-sweeper-solver"
packages = [
    { include = "minesweeper_solver", from = "src" },
    { include = "ui" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.1.0"
pytest-xvfb = { version = "^2.0.0", markers = "sys_platform == 'linux'" }

# Linting and Formatting
black = "^24.0.0"
ruff = "^0.3.0"

# Pre-commit hooks
pre-commit = "^3.6.0"

# Type checking
mypy = "^1.8.0"

# Additional utilities
bandit = "^1.7.7"
codespell = "^2.2.6"

# Task runner (replaces Makefile)
poethepoet = "^0.24.0"

[tool.poetry.scripts]
minesweeper-solver = "main:main"

# =============================================================================
# BLACK CONFIGURATION
# =============================================================================
[tool.black]
target-version = ["py311", "py312"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | env
    | \.env
    | node_modules
)/
'''
skip-string-normalization = false
preview = false

# =============================================================================
# RUFF CONFIGURATION
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "env",
    ".env",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
respect-gitignore = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "D",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "RUF",
    "TID",
    "TCH",
    "TYP",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D406",
    "D407",
    "D413",
    "T201",
    "S110",
    "S112",
    "PLR2004",
    "FIX002",
    "S101",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "ISC001",
]
fixable = ["ALL"]
unfixable = []
extend-select = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["minesweeper_solver", "ui", "tests", "tests_ui"]
known-third-party = ["pytest"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",
    "ANN001",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "PLR2004",
    "PT011",
    "PT012",
]
"**/tests/**/*.py" = [
    "S101",
    "ANN001",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "PLR2004",
]
"**/tests_ui/**/*.py" = [
    "S101",
    "ANN001",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "PLR2004",
]
"__init__.py" = ["D104", "F401"]
"**/conftest.py" = ["D100", "D103", "ANN001", "ANN201"]

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "tests_ui"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "--strict-config"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
    "gui: marks tests as GUI tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:tkinter.*",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src", "ui"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "*/.env/*",
    "*/node_modules/*",
    "conftest.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "pass  # cov: ignore",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
title = "Minesweeper Solver Coverage"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = ["tests.*", "tests_ui.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["tkinter.*"]
ignore_missing_imports = true

# =============================================================================
# POE TASKS (Replaces Makefile)
# Run tasks with: poetry poe <task>
# Install poethepoet: poetry self add poethepoet
# =============================================================================
[tool.poe.tasks]
# Help
help = { shell = "echo 'Minesweeper Solver - Available tasks:' && poetry poe --help" }

# Installation
install = "poetry install"
install-dev = "poetry install --with dev"

# Code Quality
format = "black src/ ui/ tests/ tests_ui/ example.py main.py"
format-check = "black --check src/ ui/ tests/ tests_ui/ example.py main.py"
lint-ruff = "ruff check src/ ui/ tests/ tests_ui/ example.py main.py"
lint-mypy = "mypy src/ ui/"
lint = { sequence = ["lint-ruff", "lint-mypy", "format-check"] }
fix = "ruff check --fix src/ ui/ tests/ tests_ui/ example.py main.py"

# Security & Spelling
security = "bandit -r src/ ui/"
spelling = "codespell src/ ui/ tests/ tests_ui/ --skip='*.pyc,*.pyo,*.egg-info,.git,__pycache__'"

# Testing
test = "pytest tests/ tests_ui/ -v"
test-unit = "pytest tests/ -v"
test-ui = "pytest tests_ui/ -v"
test-cov = "pytest tests/ tests_ui/ --cov=src --cov=ui --cov-report=html --cov-report=xml --cov-report=term"
test-ci = { shell = "HEADLESS=true pytest tests/ tests_ui/ -v --tb=short" }
test-fast = "pytest tests/ tests_ui/ -v -m 'not slow'"

# Pre-commit
pre-commit-install = "pre-commit install"
pre-commit = "pre-commit run --all-files"

# Application
run = "python main.py"
example = "python example.py"

# CI/CD
ci = { sequence = [
    "clean",
    "install-dev",
    "format-check",
    "lint",
    "security",
    "test-ci",
    "spelling",
] }
check = { sequence = ["lint", "test"] }

# Cleanup
clean = { shell = """python -c "
import shutil, glob, os, sys
for p in ['build', 'dist', 'htmlcov', '.pytest_cache', '.mypy_cache', '.ruff_cache', '.eggs']:
    shutil.rmtree(p, True)
for f in glob.glob('*.egg-info') + ['coverage.xml', 'bandit-report.json']:
    try:
        os.remove(f)
    except:
        pass
for pattern in ['**/__pycache__', '**/*.pyc', '**/*.pyo', '**/.coverage']:
    for f in glob.glob(pattern, recursive=True):
        try:
            if os.path.isfile(f):
                os.remove(f)
            else:
                shutil.rmtree(f)
        except:
            pass
print('Cleanup complete!')
""" }

# Build
build = "poetry build"
